--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.0",
     "angular-route": "^1.5.8",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0"
